@@ -212,8 +212,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.4</version>
         <configuration>
-          <argLine>-Xmx4096m -XX:MaxPermSize=256m</argLine>
+          <argLine>-Xmx4096m</argLine>
         </configuration>
       </plugin>
     </plugins>
